feat: add rendering web page

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,1 +1,19 @@
-<h3>hello!!</h3>
+<div class="container mt-3 py-3"
+  style="border:2px solid rgb(40, 26, 121);width:30rem; background-color:rgb(80, 167, 211)">
+  <div class="d-flex flex-column align-items-center">
+    <h2>URL shorter</h2>
+    <img style="width:10rem"
+      src="https://assets-lighthouse.alphacamp.co/uploads/image/file/16716/ExportedContentImage_00.png" alt="圖片">
+    <form class="input-group mt-3" action="/" method="POST">
+      <label class="form-label" for="url"></label>
+      <input class="form-control" type="text" id="url" name="url" placeholder="Input URL here..." value="">
+      <div class="input-group-append">
+        <button type="submit" class="btn btn-success">Shorten</button>
+      </div>
+    </form>
+  </div>
+  <div class="alert alert-success mt-3" role="alert">
+    <h5 class="alert-heading">Shorten Successfully !!!</h5>
+    <a href=""></a>
+  </div>
+</div>
