--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -10,8 +10,23 @@
 </head>
 
 <body>
-
-  {{{body}}}
+  <div class="container mt-3 py-3"
+    style="border:2px solid rgb(40, 26, 121);width:30rem; background-color:rgb(80, 167, 211)">
+    <div class="d-flex flex-column align-items-center">
+      <h2>URL shorter</h2>
+      <img style="width:10rem"
+        src="https://assets-lighthouse.alphacamp.co/uploads/image/file/16716/ExportedContentImage_00.png" alt="圖片">
+      <form class="input-group mt-3" action="/" method="POST">
+        <label class="form-label" for="url"></label>
+        <input class="form-control" type="url" id="url" name="url" placeholder="Input URL here..."
+          value="{{originalURL}}" required>
+        <div class="input-group-append">
+          <button type="submit" class="btn btn-success">Shorter</button>
+        </div>
+      </form>
+      {{{body}}}
+    </div>
+  </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
