feat: modify create shortURL function

--- a/views/error.hbs
+++ b/views/error.hbs
@@ -1,6 +1,6 @@
 <div class="alert alert-danger mt-3" role="alert">
-  <h5 class="alert-heading">Cannot Shorten the URL !!!</h5>
-  <p>The URL is not valid.</p>
+  <h5 class="alert-heading">The URL is not valid !!!</h5>
+  <p>Check and confirm the URL is correct.</p>
   <hr>
   <p>{{errmsg}}</p>
 </div>
