feat: modify error page

--- a/views/error.hbs
+++ b/views/error.hbs
@@ -1,6 +1,6 @@
 <div class="alert alert-danger mt-3" role="alert">
-  <h5 class="alert-heading">The URL is not valid !!!</h5>
-  <p>Check and confirm the URL is correct.</p>
+  <h5 class="alert-heading">{{errtitle}}</h5>
+  <p>{{errcont}}</p>
   <hr>
   <p>{{errmsg}}</p>
 </div>
