--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,17 @@
 {{#if shorterURL}}
 <div class="alert alert-success mt-3" role="alert">
   <h5 class="alert-heading">Shorter Successfully !!!</h5>
-  <a href="/show/{{shorterURL}}">{{localURL}}/{{shorterURL}}</a>
+  <a id="link" href="/show/{{shorterURL}}">{{localURL}}/{{shorterURL}}</a>
+  <button class="btn btn-sm btn-outline-dark mx-2" onclick='copyURL()'>Copy URL</button>
 </div>
 {{/if}}
+
+<script>
+  function copyURL() {
+    console.log("a")
+    const linkText = document.getElementById('link').textContent
+    console.log(linkText)
+    navigator.clipboard.writeText(linkText);
+    alert(`copy the text: ${linkText}`)
+  } 
+</script>
